Fix cover photo button alignment (#2204)

--- a/apps/audius-client/packages/web/src/components/cover-photo/CoverPhoto.module.css
+++ b/apps/audius-client/packages/web/src/components/cover-photo/CoverPhoto.module.css
@@ -41,7 +41,7 @@
   z-index: 5;
   position: absolute;
   right: 0;
-  top: 32px;
+  top: 16px;
 }
 
 .hide {
